# NotebookAgendaCheck

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
android/launcher/: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
android/selfcontained/: ARCHITECTURE.md  README.md  TODO.md
app/: __init__.py  cli.py  constants.py  flet_app.py  gui.py  models.py  students.py
app/nicegui_app/: __main__.py  main.py
data/: mock_students.xlsx
docs/: flowchart.md
scripts/: benchmark_na_reliability.py  generate_mock_excel.py
scripts/android/: backup_records.sh  restore_records.sh  start_na_app.sh  status_na_app.sh  stop_na_app.sh
src/app/: flags.py
src/notebookagendacheck/: __init__.py  (+6 more)
tests/: test_dashboard_core_effects_and_formatting.py  test_dashboard_core_preferences.py  test_dashboard_core_selection.py  test_flags.py  test_na_check_corruption_recovery.py  test_na_check_dashboard_datepicker.py  test_na_check_dashboard_error_handling.py  test_na_check_dashboard_navigation.py  test_na_check_dashboard_roster_upload.py  test_na_check_dashboard_subject.py  test_na_check_error_log_csv_robustness.py  test_na_check_reliability_logger.py  test_na_check_roster.py  test_na_check_rubric.py  test_na_check_storage.py  test_na_check_storage_atomic.py  test_nicegui_check_page.py  test_nicegui_health_endpoint.py  test_nicegui_main_runtime_config.py  test_nicegui_persistence_service.py  test_nicegui_shortcuts.py  test_nicegui_workflow_controller.py  test_notebookagendacheck_entrypoint.py  test_scoring.py  test_storage.py
(+64 files in other folders)
